--- a/app/src/main/res/layout/item_female.xml
+++ b/app/src/main/res/layout/item_female.xml
@@ -15,7 +15,7 @@
 
 
         <ImageView
-            android:id="@+id/profile"
+            android:id="@+id/fprofile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@android:drawable/ic_menu_help" />
@@ -34,7 +34,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/chatmessage_tv_nickname"
+                    android:id="@+id/fnickname"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="5dp"
@@ -47,7 +47,7 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/chatmessage_tv_message"
+                android:id="@+id/fmessage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxLength="150"
@@ -59,7 +59,7 @@
 
 
             <TextView
-                android:id="@+id/chatmessage_tv_date"
+                android:id="@+id/fdate"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="2019-04-30 12:30" />
