--- a/app/src/main/res/layout/item_male.xml
+++ b/app/src/main/res/layout/item_male.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/chatmessage_item_linear"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -9,21 +10,46 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp">
+        android:layout_marginTop="5dp"
+        android:gravity="center_vertical">
+
+
+        <ImageView
+            android:id="@+id/mprofile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@android:drawable/ic_menu_help" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
+            android:gravity="center_vertical"
             android:orientation="vertical">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/mnickname"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:text="닉네임"
+                    android:textColor="@color/black"
+                    android:textSize="15dp"
+                    android:textStyle="bold" />
+
+
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/chatmessage2_tv_message"
+                android:id="@+id/mmessage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_marginRight="10dp"
                 android:maxLength="150"
                 android:maxLines="15"
                 android:padding="10dp"
@@ -31,12 +57,13 @@
                 android:textColor="@color/black"
                 android:textSize="15dp" />
 
+
             <TextView
-                android:id="@+id/chatmessage2_tv_date"
+                android:id="@+id/mdate"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_gravity="right"
                 android:text="2019-04-30 12:30" />
+
         </LinearLayout>
     </LinearLayout>
 
